added pom runner update

--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,14 +1,13 @@
-<h2>Reporter output</h2><table><tr><td><div "result">I logged into WordPress (PASSED : 4s)</div></td></tr>
-<tr><td><div "result">the title of the landing page should be &quot;Dashboard  Cybertek&#x27;s Blog!  WordPress&quot; (PASSED : 0s)</div></td></tr>
-<tr><td><div "result">the expected url should be &quot;http:&#x2F;&#x2F;34.223.219.142:1022&#x2F;wordpress&#x2F;wp-admin&#x2F;&quot; (PASSED : 0s)</div></td></tr>
+<h2>Reporter output</h2><table><tr><td><div "result">I logged into WordPress (PASSED : 5s)</div></td></tr>
+<tr><td><div "result">I add a new user: (PASSED : 1s)</div></td></tr>
+<tr><td><div "result">I should see contact information for &quot;Satoshi Satoshi@test.com&quot; (PASSED : 0s)</div></td></tr>
+<tr><td><div "result">I logged into WordPress (PASSED : 5s)</div></td></tr>
+<tr><td><div "result">I add a new user: (PASSED : 0s)</div></td></tr>
+<tr><td><div "result">I should see contact information for &quot;John John@test.com&quot; (PASSED : 0s)</div></td></tr>
+<tr><td><div "result">I logged into WordPress (PASSED : 5s)</div></td></tr>
+<tr><td><div "result">I add a new user: (PASSED : 1s)</div></td></tr>
+<tr><td><div "result">I should see contact information for &quot;Rajesh Rajesh@test.com&quot; (PASSED : 0s)</div></td></tr>
 <tr><td><div "result">I logged into WordPress (PASSED : 4s)</div></td></tr>
-<tr><td><div "result">I create a page (PASSED : 9s)</div></td></tr>
-<tr><td><div "result">I publish the page (PASSED : 28s)</div></td></tr>
-<tr><td><div "result">the page should be displayed (PASSED : 11s)</div></td></tr>
-<tr><td><div "result">I logout from application (PASSED : 15s)</div></td></tr>
-<tr><td><div "result">I logged into WordPress (PASSED : 4s)</div></td></tr>
-<tr><td><div "result">I create a post (PASSED : 3s)</div></td></tr>
-<tr><td><div "result">I publish the page (PASSED : 28s)</div></td></tr>
-<tr><td><div "result">the post should be displayed (PASSED : 2s)</div></td></tr>
-<tr><td><div "result">I logout from application (PASSED : 15s)</div></td></tr>
+<tr><td><div "result">I add a new user: (PASSED : 0s)</div></td></tr>
+<tr><td><div "result">I should see contact information for &quot;Bonnie Bonnie@test.com&quot; (PASSED : 0s)</div></td></tr>
 </table>
