--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="657fd0">  <td>18/04/04 09:14:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(cucumber.api.testng.PickleEventWrapper, cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.app.runners.CukesRunner@1ce92674]">runScenario</td> 
+<tr bgcolor="657fd0">  <td>18/04/07 11:52:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(cucumber.api.testng.PickleEventWrapper, cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.app.runners.CukesRunner@1ce92674]">runScenario</td> 
   <td>main@1262822392</td>   <td></td> </tr>
-<tr bgcolor="657fd0">  <td>18/04/04 09:14:21</td>   <td>8584</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(cucumber.api.testng.PickleEventWrapper, cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.app.runners.CukesRunner@1ce92674]">runScenario</td> 
+<tr bgcolor="657fd0">  <td>18/04/07 11:52:31</td>   <td>14011</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(cucumber.api.testng.PickleEventWrapper, cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.app.runners.CukesRunner@1ce92674]">runScenario</td> 
   <td>main@1262822392</td>   <td></td> </tr>
-<tr bgcolor="657fd0">  <td>18/04/04 09:15:32</td>   <td>80272</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(cucumber.api.testng.PickleEventWrapper, cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.app.runners.CukesRunner@1ce92674]">runScenario</td> 
+<tr bgcolor="657fd0">  <td>18/04/07 11:52:41</td>   <td>23671</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(cucumber.api.testng.PickleEventWrapper, cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.app.runners.CukesRunner@1ce92674]">runScenario</td> 
   <td>main@1262822392</td>   <td></td> </tr>
-<tr bgcolor="657fd0">  <td>18/04/04 09:14:12</td>   <td>-332</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:com.app.runners.CukesRunner@1ce92674]">&gt;&gt;setUpClass</td> 
+<tr bgcolor="657fd0">  <td>18/04/07 11:52:51</td>   <td>33682</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(cucumber.api.testng.PickleEventWrapper, cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.app.runners.CukesRunner@1ce92674]">runScenario</td> 
+  <td>main@1262822392</td>   <td></td> </tr>
+<tr bgcolor="657fd0">  <td>18/04/07 11:52:17</td>   <td>-332</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:com.app.runners.CukesRunner@1ce92674]">&gt;&gt;setUpClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1262822392</td>   <td></td> </tr>
-<tr bgcolor="657fd0">  <td>18/04/04 09:16:29</td>   <td>137254</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:com.app.runners.CukesRunner@1ce92674]">&lt;&lt;tearDownClass</td> 
+<tr bgcolor="657fd0">  <td>18/04/07 11:53:00</td>   <td>43254</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:com.app.runners.CukesRunner@1ce92674]">&lt;&lt;tearDownClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1262822392</td>   <td></td> </tr>
 </table>
