update removed duplicate feature step

--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,27 +1,19 @@
-<h2>Reporter output</h2><table><tr><td><div "result">I logged into WordPress (PASSED : 3s)</div></td></tr>
-<tr><td><div "result">I click on Comments (PASSED : 0s)</div></td></tr>
-<tr><td><div "result">i click on &quot;All&quot; (PASSED : 0s)</div></td></tr>
-<tr><td><div "result">Verifying how many comments posted (PASSED : 0s)</div></td></tr>
+<h2>Reporter output</h2><table><tr><td><div "result">I logged into WordPress (PASSED : 4s)</div></td></tr>
+<tr><td><div "result">I create a new page (PASSED : 5s)</div></td></tr>
+<tr><td><div "result">Set title as &quot;Tech 17 Calendar&quot; (PASSED : 15s)</div></td></tr>
+<tr><td><div "result">I click on Page Builder (PASSED : 22s)</div></td></tr>
+<tr><td><div "result">I add Calendar Widget (PASSED : 10s)</div></td></tr>
+<tr><td><div "result">Publish Calendar Page (PASSED : 7s)</div></td></tr>
+<tr><td><div "result">the Calendar should be displayed in Page (PASSED : 6s)</div></td></tr>
 <tr><td><div "result">I logout from application (PASSED : 15s)</div></td></tr>
 <tr><td><div "result">I logged into WordPress (PASSED : 3s)</div></td></tr>
-<tr><td><div "result">I click on Comments (PASSED : 0s)</div></td></tr>
-<tr><td><div "result">I click on Tech17 reply and send text and reply (PASSED : 0s)</div></td></tr>
-<tr><td><div "result">I click on View Post and posting new comment (PASSED : 1s)</div></td></tr>
-<tr><td><div "result">In same page posting new comment (PASSED : 0s)</div></td></tr>
-<tr><td><div "result">I logout from application (PASSED : 15s)</div></td></tr>
-<tr><td><div "result">I logged into WordPress (PASSED : 4s)</div></td></tr>
-<tr><td><div "result">I click on Appearance&#x2F;Menus (PASSED : 6s)</div></td></tr>
-<tr><td><div "result">I click on &quot;Custom Links&quot; (PASSED : 0s)</div></td></tr>
-<tr><td><div "result">the new menu item should be displayed in Menu Structure (PASSED : 0s)</div></td></tr>
-<tr><td><div "result">I logout from application (PASSED : 15s)</div></td></tr>
-<tr><td><div "result">I logged into WordPress (PASSED : 4s)</div></td></tr>
-<tr><td><div "result">I click on Appearance&#x2F;Menus (PASSED : 6s)</div></td></tr>
-<tr><td><div "result">I create &quot;Posts&quot; click on check box (PASSED : 5s)</div></td></tr>
-<tr><td><div "result">the new menu item should be displayed in Menu Structure (PASSED : 0s)</div></td></tr>
-<tr><td><div "result">I logout from application (PASSED : 15s)</div></td></tr>
-<tr><td><div "result">I logged into WordPress (PASSED : 4s)</div></td></tr>
-<tr><td><div "result">I click on Appearance&#x2F;Menus (PASSED : 6s)</div></td></tr>
-<tr><td><div "result">I am creating &quot;Pages&quot; click on Smoke Test check box (PASSED : 5s)</div></td></tr>
-<tr><td><div "result">the new menu item should be displayed in Menu Structure (PASSED : 0s)</div></td></tr>
-<tr><td><div "result">I logout from application (PASSED : 15s)</div></td></tr>
+<tr><td><div "result">I create a new page (PASSED : 5s)</div></td></tr>
+<tr><td><div "result">Set title as &quot;Tech 17 Team&quot; (PASSED : 16s)</div></td></tr>
+<tr><td><div "result">I click on Page Builder (PASSED : 22s)</div></td></tr>
+<tr><td><div "result">I add Gallery widgets (PASSED : 15s)</div></td></tr>
+<tr><td><div "result">Set title &quot;Meet My Team&quot; (PASSED : 5s)</div></td></tr>
+<tr><td><div "result">Add on Images (FAILED : 15s)</div></td></tr>
+<tr><td><div "result">Publish images in gallery (SKIPPED)</div></td></tr>
+<tr><td><div "result">Gallery images should be displayed (SKIPPED)</div></td></tr>
+<tr><td><div "result">I logout from application (SKIPPED)</div></td></tr>
 </table>
