--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,52 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="657fd0">  <td>18/04/16 19:03:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(cucumber.api.testng.PickleEventWrapper, cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.app.runners.CukesRunner@1ce92674]">runScenario</td> 
-  <td>main@1262822392</td>   <td></td> </tr>
-<tr bgcolor="657fd0">  <td>18/04/16 19:05:00</td>   <td>91552</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(cucumber.api.testng.PickleEventWrapper, cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.app.runners.CukesRunner@1ce92674]">runScenario</td> 
-  <td>main@1262822392</td>   <td></td> </tr>
-<tr bgcolor="657fd0">  <td>18/04/16 19:03:29</td>   <td>-363</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:com.app.runners.CukesRunner@1ce92674]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1262822392</td>   <td></td> </tr>
-<tr bgcolor="657fd0">  <td>18/04/16 19:06:27</td>   <td>178175</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:com.app.runners.CukesRunner@1ce92674]">&lt;&lt;tearDownClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1262822392</td>   <td></td> </tr>
+<tr bgcolor="b3acfe">  <td>18/04/16 19:52:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(cucumber.api.testng.PickleEventWrapper, cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.app.runners.RegressionRunner@3f49dace]">runScenario</td> 
+  <td>main@1663411182</td>   <td></td> </tr>
+<tr bgcolor="b3acfe">  <td>18/04/16 19:53:07</td>   <td>24620</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(cucumber.api.testng.PickleEventWrapper, cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.app.runners.RegressionRunner@3f49dace]">runScenario</td> 
+  <td>main@1663411182</td>   <td></td> </tr>
+<tr bgcolor="b3acfe">  <td>18/04/16 19:53:31</td>   <td>48264</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(cucumber.api.testng.PickleEventWrapper, cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.app.runners.RegressionRunner@3f49dace]">runScenario</td> 
+  <td>main@1663411182</td>   <td></td> </tr>
+<tr bgcolor="b3acfe">  <td>18/04/16 19:53:44</td>   <td>61689</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(cucumber.api.testng.PickleEventWrapper, cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.app.runners.RegressionRunner@3f49dace]">runScenario</td> 
+  <td>main@1663411182</td>   <td></td> </tr>
+<tr bgcolor="b3acfe">  <td>18/04/16 19:54:20</td>   <td>97275</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(cucumber.api.testng.PickleEventWrapper, cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.app.runners.RegressionRunner@3f49dace]">runScenario</td> 
+  <td>main@1663411182</td>   <td></td> </tr>
+<tr bgcolor="b3acfe">  <td>18/04/16 19:54:55</td>   <td>132102</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(cucumber.api.testng.PickleEventWrapper, cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.app.runners.RegressionRunner@3f49dace]">runScenario</td> 
+  <td>main@1663411182</td>   <td></td> </tr>
+<tr bgcolor="b3acfe">  <td>18/04/16 19:55:45</td>   <td>182264</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(cucumber.api.testng.PickleEventWrapper, cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.app.runners.RegressionRunner@3f49dace]">runScenario</td> 
+  <td>main@1663411182</td>   <td></td> </tr>
+<tr bgcolor="b3acfe">  <td>18/04/16 19:56:26</td>   <td>223077</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(cucumber.api.testng.PickleEventWrapper, cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.app.runners.RegressionRunner@3f49dace]">runScenario</td> 
+  <td>main@1663411182</td>   <td></td> </tr>
+<tr bgcolor="b3acfe">  <td>18/04/16 19:57:09</td>   <td>266396</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(cucumber.api.testng.PickleEventWrapper, cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.app.runners.RegressionRunner@3f49dace]">runScenario</td> 
+  <td>main@1663411182</td>   <td></td> </tr>
+<tr bgcolor="b3acfe">  <td>18/04/16 19:57:24</td>   <td>280847</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(cucumber.api.testng.PickleEventWrapper, cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.app.runners.RegressionRunner@3f49dace]">runScenario</td> 
+  <td>main@1663411182</td>   <td></td> </tr>
+<tr bgcolor="b3acfe">  <td>18/04/16 19:57:44</td>   <td>301422</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(cucumber.api.testng.PickleEventWrapper, cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.app.runners.RegressionRunner@3f49dace]">runScenario</td> 
+  <td>main@1663411182</td>   <td></td> </tr>
+<tr bgcolor="b3acfe">  <td>18/04/16 19:58:04</td>   <td>321359</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(cucumber.api.testng.PickleEventWrapper, cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.app.runners.RegressionRunner@3f49dace]">runScenario</td> 
+  <td>main@1663411182</td>   <td></td> </tr>
+<tr bgcolor="b3acfe">  <td>18/04/16 19:58:24</td>   <td>341127</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(cucumber.api.testng.PickleEventWrapper, cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.app.runners.RegressionRunner@3f49dace]">runScenario</td> 
+  <td>main@1663411182</td>   <td></td> </tr>
+<tr bgcolor="b3acfe">  <td>18/04/16 19:58:44</td>   <td>361236</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(cucumber.api.testng.PickleEventWrapper, cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.app.runners.RegressionRunner@3f49dace]">runScenario</td> 
+  <td>main@1663411182</td>   <td></td> </tr>
+<tr bgcolor="b3acfe">  <td>18/04/16 19:58:55</td>   <td>372036</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(cucumber.api.testng.PickleEventWrapper, cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.app.runners.RegressionRunner@3f49dace]">runScenario</td> 
+  <td>main@1663411182</td>   <td></td> </tr>
+<tr bgcolor="b3acfe">  <td>18/04/16 19:59:17</td>   <td>394368</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(cucumber.api.testng.PickleEventWrapper, cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.app.runners.RegressionRunner@3f49dace]">runScenario</td> 
+  <td>main@1663411182</td>   <td></td> </tr>
+<tr bgcolor="b3acfe">  <td>18/04/16 19:59:54</td>   <td>430825</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(cucumber.api.testng.PickleEventWrapper, cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.app.runners.RegressionRunner@3f49dace]">runScenario</td> 
+  <td>main@1663411182</td>   <td></td> </tr>
+<tr bgcolor="b3acfe">  <td>18/04/16 20:00:20</td>   <td>457404</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(cucumber.api.testng.PickleEventWrapper, cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.app.runners.RegressionRunner@3f49dace]">runScenario</td> 
+  <td>main@1663411182</td>   <td></td> </tr>
+<tr bgcolor="b3acfe">  <td>18/04/16 20:00:43</td>   <td>480642</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(cucumber.api.testng.PickleEventWrapper, cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.app.runners.RegressionRunner@3f49dace]">runScenario</td> 
+  <td>main@1663411182</td>   <td></td> </tr>
+<tr bgcolor="b3acfe">  <td>18/04/16 20:01:21</td>   <td>518686</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(cucumber.api.testng.PickleEventWrapper, cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.app.runners.RegressionRunner@3f49dace]">runScenario</td> 
+  <td>main@1663411182</td>   <td></td> </tr>
+<tr bgcolor="b3acfe">  <td>18/04/16 20:02:11</td>   <td>568688</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(cucumber.api.testng.PickleEventWrapper, cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.app.runners.RegressionRunner@3f49dace]">runScenario</td> 
+  <td>main@1663411182</td>   <td></td> </tr>
+<tr bgcolor="b3acfe">  <td>18/04/16 20:02:50</td>   <td>606827</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(cucumber.api.testng.PickleEventWrapper, cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.app.runners.RegressionRunner@3f49dace]">runScenario</td> 
+  <td>main@1663411182</td>   <td></td> </tr>
+<tr bgcolor="b3acfe">  <td>18/04/16 19:52:42</td>   <td>-490</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:com.app.runners.RegressionRunner@3f49dace]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1663411182</td>   <td></td> </tr>
+<tr bgcolor="b3acfe">  <td>18/04/16 20:03:28</td>   <td>645026</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:com.app.runners.RegressionRunner@3f49dace]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1663411182</td>   <td></td> </tr>
 </table>
