--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,19 +1,121 @@
 <h2>Reporter output</h2><table><tr><td><div "result">I logged into WordPress (PASSED : 4s)</div></td></tr>
-<tr><td><div "result">I create a new page (PASSED : 5s)</div></td></tr>
-<tr><td><div "result">Set title as &quot;Tech 17 Calendar&quot; (PASSED : 15s)</div></td></tr>
-<tr><td><div "result">I click on Page Builder (PASSED : 22s)</div></td></tr>
-<tr><td><div "result">I add Calendar Widget (PASSED : 10s)</div></td></tr>
-<tr><td><div "result">Publish Calendar Page (PASSED : 7s)</div></td></tr>
-<tr><td><div "result">the Calendar should be displayed in Page (PASSED : 6s)</div></td></tr>
+<tr><td><div "result">I click on Comments (PASSED : 0s)</div></td></tr>
+<tr><td><div "result">i click on &quot;All&quot; (PASSED : 0s)</div></td></tr>
+<tr><td><div "result">Verifying how many comments posted (PASSED : 0s)</div></td></tr>
 <tr><td><div "result">I logout from application (PASSED : 15s)</div></td></tr>
 <tr><td><div "result">I logged into WordPress (PASSED : 3s)</div></td></tr>
-<tr><td><div "result">I create a new page (PASSED : 5s)</div></td></tr>
-<tr><td><div "result">Set title as &quot;Tech 17 Team&quot; (PASSED : 16s)</div></td></tr>
-<tr><td><div "result">I click on Page Builder (PASSED : 22s)</div></td></tr>
-<tr><td><div "result">I add Gallery widgets (PASSED : 15s)</div></td></tr>
-<tr><td><div "result">Set title &quot;Meet My Team&quot; (PASSED : 5s)</div></td></tr>
-<tr><td><div "result">Add on Images (FAILED : 15s)</div></td></tr>
-<tr><td><div "result">Publish images in gallery (SKIPPED)</div></td></tr>
-<tr><td><div "result">Gallery images should be displayed (SKIPPED)</div></td></tr>
+<tr><td><div "result">I click on Comments (PASSED : 0s)</div></td></tr>
+<tr><td><div "result">I click on Tech17 reply and send text and reply (PASSED : 0s)</div></td></tr>
+<tr><td><div "result">I click on View Post and posting new comment (PASSED : 1s)</div></td></tr>
+<tr><td><div "result">In same page posting new comment (PASSED : 0s)</div></td></tr>
+<tr><td><div "result">I logout from application (PASSED : 15s)</div></td></tr>
+<tr><td><div "result">I logged into WordPress (PASSED : 1s)</div></td></tr>
+<tr><td><div "result">I click on Appearance&#x2F;Menus (FAILED : 10s)</div></td></tr>
+<tr><td><div "result">I click on &quot;Custom Links&quot; (SKIPPED)</div></td></tr>
+<tr><td><div "result">the new menu item should be displayed in Menu Structure (SKIPPED)</div></td></tr>
 <tr><td><div "result">I logout from application (SKIPPED)</div></td></tr>
+<tr><td><div "result">I logged into WordPress (PASSED : 3s)</div></td></tr>
+<tr><td><div "result">I click on Appearance&#x2F;Menus (PASSED : 10s)</div></td></tr>
+<tr><td><div "result">I create &quot;Posts&quot; click on check box (PASSED : 5s)</div></td></tr>
+<tr><td><div "result">the new menu item should be displayed in Menu Structure (PASSED : 0s)</div></td></tr>
+<tr><td><div "result">I logout from application (PASSED : 15s)</div></td></tr>
+<tr><td><div "result">I logged into WordPress (PASSED : 3s)</div></td></tr>
+<tr><td><div "result">I click on Appearance&#x2F;Menus (PASSED : 9s)</div></td></tr>
+<tr><td><div "result">I am creating &quot;Pages&quot; click on Smoke Test check box (PASSED : 5s)</div></td></tr>
+<tr><td><div "result">the new menu item should be displayed in Menu Structure (PASSED : 0s)</div></td></tr>
+<tr><td><div "result">I logout from application (PASSED : 15s)</div></td></tr>
+<tr><td><div "result">I logged into WordPress (PASSED : 3s)</div></td></tr>
+<tr><td><div "result">I click on Appearance&#x2F;themes (PASSED : 6s)</div></td></tr>
+<tr><td><div "result">I am on themes page (PASSED : 2s)</div></td></tr>
+<tr><td><div "result">activate new theme (PASSED : 7s)</div></td></tr>
+<tr><td><div "result">the new theme should displayed (PASSED : 14s)</div></td></tr>
+<tr><td><div "result">I logout from application (PASSED : 15s)</div></td></tr>
+<tr><td><div "result">I logged into WordPress (PASSED : 3s)</div></td></tr>
+<tr><td><div "result">I click on Appearance&#x2F;themes (PASSED : 6s)</div></td></tr>
+<tr><td><div "result">I am on themes page (PASSED : 2s)</div></td></tr>
+<tr><td><div "result">add new theme (PASSED : 8s)</div></td></tr>
+<tr><td><div "result">the new theme should displayed (PASSED : 3s)</div></td></tr>
+<tr><td><div "result">I logout from application (PASSED : 15s)</div></td></tr>
+<tr><td><div "result">I logged into WordPress (PASSED : 4s)</div></td></tr>
+<tr><td><div "result">I click on Appearance&#x2F;themes (PASSED : 9s)</div></td></tr>
+<tr><td><div "result">I am on themes page (PASSED : 2s)</div></td></tr>
+<tr><td><div "result">I put back the default theme (PASSED : 7s)</div></td></tr>
+<tr><td><div "result">the default theme should displayed (PASSED : 3s)</div></td></tr>
+<tr><td><div "result">I logout from application (PASSED : 15s)</div></td></tr>
+<tr><td><div "result">I logged into WordPress (PASSED : 3s)</div></td></tr>
+<tr><td><div "result">I click on Categories (PASSED : 4s)</div></td></tr>
+<tr><td><div "result">Categories page is displayed (PASSED : 1s)</div></td></tr>
+<tr><td><div "result">I create a new category (PASSED : 0s)</div></td></tr>
+<tr><td><div "result">I should see new category &quot;start&quot; (PASSED : 3s)</div></td></tr>
+<tr><td><div "result">I logged into WordPress (PASSED : 3s)</div></td></tr>
+<tr><td><div "result">I click on Categories (PASSED : 4s)</div></td></tr>
+<tr><td><div "result">Categories page is displayed (PASSED : 1s)</div></td></tr>
+<tr><td><div "result">I create multiple new categories (PASSED : 0s)</div></td></tr>
+<tr><td><div "result">I should see new category &quot;newCategory&quot; (PASSED : 3s)</div></td></tr>
+<tr><td><div "result">With slug &quot;firstNew&quot; (PASSED : 3s)</div></td></tr>
+<tr><td><div "result">With description &quot;first new category in scenario outline&quot; (PASSED : 3s)</div></td></tr>
+<tr><td><div "result">I logged into WordPress (PASSED : 3s)</div></td></tr>
+<tr><td><div "result">I click on Categories (PASSED : 4s)</div></td></tr>
+<tr><td><div "result">Categories page is displayed (PASSED : 1s)</div></td></tr>
+<tr><td><div "result">I create multiple new categories (PASSED : 0s)</div></td></tr>
+<tr><td><div "result">I should see new category &quot;nextNew&quot; (PASSED : 3s)</div></td></tr>
+<tr><td><div "result">With slug &quot;anotherCategory&quot; (PASSED : 3s)</div></td></tr>
+<tr><td><div "result">With description &quot;second new category in scenario outline&quot; (PASSED : 3s)</div></td></tr>
+<tr><td><div "result">I logged into WordPress (PASSED : 3s)</div></td></tr>
+<tr><td><div "result">I click on Categories (PASSED : 4s)</div></td></tr>
+<tr><td><div "result">Categories page is displayed (PASSED : 1s)</div></td></tr>
+<tr><td><div "result">I create multiple new categories (PASSED : 0s)</div></td></tr>
+<tr><td><div "result">I should see new category &quot;lastNewCategory&quot; (PASSED : 3s)</div></td></tr>
+<tr><td><div "result">With slug &quot;Category3&quot; (PASSED : 3s)</div></td></tr>
+<tr><td><div "result">With description &quot;third new category in scenario outline&quot; (PASSED : 3s)</div></td></tr>
+<tr><td><div "result">I logged into WordPress (PASSED : 3s)</div></td></tr>
+<tr><td><div "result">I click on Pages (PASSED : 0s)</div></td></tr>
+<tr><td><div "result">I click to Add New (PASSED : 2s)</div></td></tr>
+<tr><td><div "result">I enter title &quot;Lalafo Page&quot; (PASSED : 0s)</div></td></tr>
+<tr><td><div "result">I type on text field (PASSED : 10s)</div></td></tr>
+<tr><td><div "result">I publish (PASSED : 2s)</div></td></tr>
+<tr><td><div "result">Then I logout from application (PASSED : 0s)</div></td></tr>
+<tr><td><div "result">I logged into WordPress (PASSED : 3s)</div></td></tr>
+<tr><td><div "result">I click on Pages (PASSED : 0s)</div></td></tr>
+<tr><td><div "result">I click to Add New (PASSED : 2s)</div></td></tr>
+<tr><td><div "result">I enter title &quot;Lalafo Page&quot; (PASSED : 0s)</div></td></tr>
+<tr><td><div "result">I click to Add Media (PASSED : 0s)</div></td></tr>
+<tr><td><div "result">I click to Media Library (PASSED : 0s)</div></td></tr>
+<tr><td><div "result">I select image (PASSED : 0s)</div></td></tr>
+<tr><td><div "result">I publish (PASSED : 1s)</div></td></tr>
+<tr><td><div "result">Then I logout from application (PASSED : 0s)</div></td></tr>
+<tr><td><div "result">I logged into WordPress (PASSED : 3s)</div></td></tr>
+<tr><td><div "result">I click on Pages (PASSED : 0s)</div></td></tr>
+<tr><td><div "result">I click to All Pages (PASSED : 0s)</div></td></tr>
+<tr><td><div "result">I look for given page name &quot;Lalafo Page&quot; (PASSED : 1s)</div></td></tr>
+<tr><td><div "result">I logout from application (PASSED : 15s)</div></td></tr>
+<tr><td><div "result">I logged into WordPress (PASSED : 3s)</div></td></tr>
+<tr><td><div "result">I click on Post&#x2F;Add New (PASSED : 3s)</div></td></tr>
+<tr><td><div "result">I enter post title on title field (PASSED : 0s)</div></td></tr>
+<tr><td><div "result">type post on text area (PASSED : 10s)</div></td></tr>
+<tr><td><div "result">I click publish (PASSED : 2s)</div></td></tr>
+<tr><td><div "result">I logout from application (PASSED : 15s)</div></td></tr>
+<tr><td><div "result">I logged into WordPress (PASSED : 3s)</div></td></tr>
+<tr><td><div "result">I click on Post&#x2F;Add New (PASSED : 3s)</div></td></tr>
+<tr><td><div "result">I enter post title on title field (PASSED : 0s)</div></td></tr>
+<tr><td><div "result">I click Add Media button (PASSED : 1s)</div></td></tr>
+<tr><td><div "result">I click publish (PASSED : 2s)</div></td></tr>
+<tr><td><div "result">I logout from application (PASSED : 15s)</div></td></tr>
+<tr><td><div "result">I logged into WordPress (PASSED : 3s)</div></td></tr>
+<tr><td><div "result">I click on Posts (PASSED : 1s)</div></td></tr>
+<tr><td><div "result">I click to All Posts (PASSED : 0s)</div></td></tr>
+<tr><td><div "result">I look for given post name &quot;Lalafo&quot; (PASSED : 1s)</div></td></tr>
+<tr><td><div "result">I logout from application (PASSED : 15s)</div></td></tr>
+<tr><td><div "result">I logged into WordPress (PASSED : 3s)</div></td></tr>
+<tr><td><div "result">I add a new user: (PASSED : 33s)</div></td></tr>
+<tr><td><div "result">I should see contact information for &quot;Satoshi Satoshi@test.com&quot; (PASSED : 0s)</div></td></tr>
+<tr><td><div "result">I logged into WordPress (PASSED : 3s)</div></td></tr>
+<tr><td><div "result">I add a new user: (PASSED : 45s)</div></td></tr>
+<tr><td><div "result">I should see contact information for &quot;John John@test.com&quot; (PASSED : 0s)</div></td></tr>
+<tr><td><div "result">I logged into WordPress (PASSED : 3s)</div></td></tr>
+<tr><td><div "result">I add a new user: (PASSED : 33s)</div></td></tr>
+<tr><td><div "result">I should see contact information for &quot;Rajesh Rajesh@test.com&quot; (PASSED : 0s)</div></td></tr>
+<tr><td><div "result">I logged into WordPress (PASSED : 3s)</div></td></tr>
+<tr><td><div "result">I add a new user: (PASSED : 33s)</div></td></tr>
+<tr><td><div "result">I should see contact information for &quot;Bonnie Bonnie@test.com&quot; (PASSED : 0s)</div></td></tr>
 </table>
